--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,26 @@
 /* styles go here */
+body {
+  margin: 0;
+  padding: 10px;
+}
+
+.form__label {
+  display: block;
+  padding: 0 0 10px 10px;
+}
+
+section {
+  border: 1px solid black;
+  margin-bottom: 2em;
+}
+
+.section__title {
+  position: relative;
+  bottom: 10px;
+  left: 10px;
+  background-color: white;
+}
+
+.input__field.age {
+  width: 40px;
+}
